doc(ui): styling improvements on docs

--- a/doc/themes/sg-doc/layouts/partials/search.html
+++ b/doc/themes/sg-doc/layouts/partials/search.html
@@ -1,3 +1,13 @@
+<div class="versionSelector">
+    <form>
+        <label for="sgVersion">StackGres Docs Version</label>
+        <select name="sgVersion" id="sgVersion">
+            <option value="https://stackgres.io/doc/0.9">0.9</option>
+            <option value="https://stackgres.io/doc/latest" selected>1.0</option>
+        </select>
+    </form>
+</div>
+<hr/>
 <div class="searchbox">
     <label for="search-by"><i class="fas fa-search"></i></label>
     <input data-search-input id="search-by" type="search" placeholder="{{T "Search-placeholder"}}">
