--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -199,9 +199,12 @@ svg.background circle {
     stroke: #00adb540;
 }
 
-
 .hidden {
     display: none;
+}
+
+.notValid {
+    border-color: red !important;
 }
 
 /* Log in */
@@ -2327,6 +2330,7 @@ label.switch {
     position: relative;
     border-radius: 6px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .switch input {
@@ -3574,7 +3578,7 @@ tr.no-results:first-child:last-child {
     width: 13px;
 }
 
-table.logs, table.backups {
+table.logs, table.backups, table.dbops {
     margin-bottom: 0;
     /* max-height: calc(100vh - 310px) !important; */
     border: none !important;
@@ -4065,7 +4069,7 @@ td.operation.Reset > span {
     display: none;
 }
 
-.daterangepicker {
+.daterangepicker:not(.single) {
     top: 170px !important;
     left: auto !important;
     right: 40px !important;
@@ -4225,7 +4229,7 @@ tr.logInfo.open:before {
 }
 
 /* Luis Logs & Filters */
-table.logs, table.backups {
+table.logs, table.backups, table.dbops {
     max-height: calc(100vh - 335px);
     height: calc(100vh - 335px);
     max-width: calc(100vw - 430px);
