--- a/doc/themes/sg-doc/static/css/theme-stackgres.css
+++ b/doc/themes/sg-doc/static/css/theme-stackgres.css
@@ -289,7 +289,7 @@ strong, strong a {
     font-weight: 700;
 }
 
-.btn, .btn:visited {
+.btn, .btn:visited, .button, .button:visited {
     border-radius: 20px;
     border: 0;
     padding: 10px 35px;
@@ -304,7 +304,7 @@ strong, strong a {
     transition: all .2s ease-in;
 }
 
-.btn:hover, .btn:visited:hover {
+.btn:hover, .btn:visited:hover, .button:hover, .button:visited:hover {
     color: var(--darkBlue);
     background-position: right top;
     transition: all .3s ease-out;
@@ -1305,6 +1305,60 @@ code.language-bash {
     background-position: calc(100% - 7px) center;
     color: var(--baseColor);
     margin-top: -2px;
+}
+
+/* Notifications */
+#lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    left: -100vw;
+    z-index: 10;
+    padding-top: 10vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    transition: opacity .2s ease-in;
+}
+
+#lightbox.show {
+    opacity: 1;
+    left: 0;
+    transition: opacity .3s ease-in;
+}
+
+#lightbox.show .message {
+    opacity: 1;
+    transition: all 1s ease-in;
+}
+
+#lightbox .overlay {
+    background: rgba(0,0,0,.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.message {
+    display: block;
+    width: 450px;
+    max-width: 80vw;
+    text-align: center;
+    color: #fff;
+    border: 1px solid var(--baseLightColor);
+    background: var(--darkBlue);
+    padding: 40px;
+    margin: 0 auto;
+    opacity: 0;
+    transition: all .5s ease-in;
+    border-radius: 10px;
+    position: relative;
+    z-index: 2;
 }
 
 
