--- a/doc/themes/sg-doc/layouts/shortcodes/children.html
+++ b/doc/themes/sg-doc/layouts/shortcodes/children.html
@@ -4,8 +4,9 @@
 {{ $depth :=  .Get "depth" | default 1 }}
 {{ $withDescription :=  .Get "description" | default false }}
 {{ $sortTerm :=  .Get "sort" | default "Weight" }}
+{{ $numbered :=  .Get "numbers" | default false }}
 
-<ul class="children children-{{$style}}">
+<ul class="children children-{{$style}}" data-numbers="{{$numbered}}">
 	{{ .Scratch.Set "pages" .Page.Pages }}
 
 	{{if .Page.IsHome}}
