chore: add toc in the `single.html`
Signed-off-by: Sebastian Webber <sebastianw@ongres.com>

--- a/doc/themes/sg-doc/layouts/_default/single.html
+++ b/doc/themes/sg-doc/layouts/_default/single.html
@@ -1,6 +1,9 @@
 {{ partial "header.html" . }}
 
+
+
 {{ .Content }}
+{{ partial "toc.html" . }}
 
 <footer class=" footline" >
 	{{with .Params.LastModifierDisplayName}}
