wip: minor version upgrade ui

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -248,6 +248,10 @@ a.no-color{
     text-align: center;
 }
 
+.alignRight {
+    text-align: right;
+}
+
 .flex-center {
     display: flex;
     align-items: center;
