--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -653,7 +653,7 @@ aside {
     border-bottom: 1px solid var(--gray1);
     background: #f8f8f8;
     overflow: visible;
-    z-index: 10;
+    z-index: 11;
 }
 
 #main {
@@ -1925,6 +1925,25 @@ li.status {
     margin-bottom: 10px;
 }
 
+.connectionInfo h2 {
+    border-bottom: none;
+    display: inline-block;
+    margin-bottom: -10px;
+    padding-bottom: 0;
+    line-height: 1.1;
+}
+
+.connectionInfo {
+    float: right;
+    position: relative;
+    top: -38px;
+    right: 5px;
+}
+
+.connectionInfo a:hover h2 {
+    color: var(--baseLightColor);
+    cursor: pointer;
+}
 
 .content table {
     margin-bottom: 10px;
@@ -3274,7 +3293,7 @@ table.clusterConfig a:hover svg, td.usedOn a:hover svg path{
     fill: var(--lblue) !important;
 }
 
-table.clusterConfig svg, td.usedOn svg, tr.controlData svg {
+table.clusterConfig svg, td.usedOn svg, tr.controlData svg, .connectionInfo svg {
     fill: var(--blue);
     width: 15px;
     display: inline-block;
@@ -5022,8 +5041,9 @@ td.label .helpTooltip {
     fill: var(--gray2);
 }
 
-.toggleSecret.show svg path {
-    fill: var(--blue)
+.connectionInfo a:hover svg path{
+    fill: var(--baseLightColor);
+    cursor: pointer;
 }
 
 .blur {
