--- a/doc/themes/sg-doc/layouts/partials/header.html
+++ b/doc/themes/sg-doc/layouts/partials/header.html
@@ -42,7 +42,7 @@
     </style>
     {{ partial "custom-header.html" . }}
   </head>
-  <body class="darkmode" data-url="{{ .RelPermalink }}">
+  <body data-url="{{ .RelPermalink }}">
     {{ partial "header-menu.html" . }}
     {{ partial "menu.html" . }}
         <section id="body">
