fix(ui): add bottom margin to tooltips paragraphs

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -5040,6 +5040,10 @@ td.label .helpTooltip {
     margin-bottom: 3px;
 }
 
+#helpTooltip * + p {
+    margin-top: 10px;
+}
+
 /* Secret Toggle */
 .toggleSecret {
     position: absolute;
