feat(ui): add timezone toggle button to nav bar

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -219,6 +219,10 @@ svg.background circle {
     text-align: center;
 }
 
+.cursor:hover {
+    cursor: pointer;
+}
+
 /* Log in */
 
 #nav .right > div#signup {
@@ -2348,6 +2352,7 @@ ul.select a.active {
     border-radius: 6px;
     margin-bottom: 20px;
     display: inline-block;
+    width: 100%;
 }
 
 .warning svg {
