fix(ui): move no-data class to global stylesheet

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -223,6 +223,13 @@ svg.background circle {
     cursor: pointer;
 }
 
+.no-data {
+    height: 120px;
+    text-align: center;
+    border-bottom: 1px solid var(--borderColor);
+    padding-top: 40px;
+}
+
 /* Log in */
 
 #nav .right > div#signup {
