--- a/doc/themes/sg-doc/static/css/theme-stackgres.css
+++ b/doc/themes/sg-doc/static/css/theme-stackgres.css
@@ -23,7 +23,7 @@ body {
     --baseLightColor: var(--lBlue);
     --baseGradient: linear-gradient(to bottom right, var(--textColor), var(--baseColor));
     --invertedGradient: linear-gradient(to bottom left, var(--textColor), var(--baseColor));
-    --verticalGradient: linear-gradient(to bottom, var(--textColor), var(--baseColor));
+    --verticalGradient: linear-gradient(to bottom, var(--baseColor), var(--baseLightColor));
 
     /* Hugo Theme Vars */
     --MAIN-TEXT-color: var(--textColor); /* Color of text by default */
@@ -239,7 +239,7 @@ a:hover {
 }
 
 #sidebar ul .active ul li:last-of-type:after {
-    background: #161636;
+    background:  var(--activeBg);
 }
 
 #sidebar a {
@@ -1287,7 +1287,7 @@ code.language-bash {
     display: inline-block;
     margin: 0;
     vertical-align: middle;
-    color: #f5f5f5;
+    color: var(--borderColor);
     font-size: 14px;
 }
 
@@ -1359,6 +1359,11 @@ code.language-bash {
     border-radius: 10px;
     position: relative;
     z-index: 2;
+}
+
+/*Light and Darkmode Adjustments*/
+.darkmode .versionSelector label, .darkmode .versionSelector select {
+    color: #f5f5f5;
 }
 
 
@@ -1488,7 +1493,7 @@ code.language-bash {
         position: fixed;
         width: 100%;
         height: 100%;
-        background: var(--darkBlue);
+        background: var(--bgColor);
         display: block;
         content: " ";
         top: 0;
