doc(ui): include firstLetterUppercase class to capitalize first letter only

--- a/doc/themes/sg-doc/static/css/theme-stackgres.css
+++ b/doc/themes/sg-doc/static/css/theme-stackgres.css
@@ -519,6 +519,10 @@ img.border {
     width: 100%;
 }
 
+.capitalFirstLetter::first-letter {
+    text-transform: uppercase;
+}
+
 /* Lightmode Fixes */
 pre code {
     color: var(--textColor);
