fix(ui): minor adjustments on web console styles

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -182,7 +182,7 @@ body, #sets h4, #sets h3, #side a.router-link-exact-active, th, .tabs a, #keywor
     border-color: var(--lBlue);
 }
 
-.darkmode #side, .darkmode #nav {
+.darkmode #side, .darkmode #nav, .darkmode .set:not(.active) > ul li {
     background: var(--bgColor);
 }
 
