fix(ui): include button to close crd details

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -1729,6 +1729,11 @@ header .actions a {
     margin-left: 15px;
 }
 
+a.borderLeft {
+    border-left: 1px solid var(--borderColor);
+    padding-left: 15px;
+}
+
 header .actions > div {
     float: right;
     margin-top: 5px;
