fix(ui): redesign cluster logs section

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -124,6 +124,10 @@ body, html {
     font-family: 'Poppins', sans-serif;
 }
 
+.monoFont {
+    font-family: 'Ubuntu Mono', 'Courier New', Courier, monospace;
+}
+
 th, table th, table.clusterConfig td.label, tr.details table .label, .yaml .label {
     font-weight: 600;
 }
